--- a/fitpolosupport/src/main/AndroidManifest.xml
+++ b/fitpolosupport/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
     <uses-feature
         android:name="android.hardware.bluetooth_le"
         android:required="true" />
+    <!-- 获取当前任务栈信息-->
+    <uses-permission android:name="android.permission.GET_TASKS" />
+
     <application
         android:allowBackup="true"
         android:supportsRtl="true">
