--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,17 @@
             android:launchMode="singleTask"
             android:screenOrientation="portrait"></activity>
 
-        <service android:name=".service.FitpoloService" />
+        <service android:name="com.fitpolo.demo.service.FitpoloService" />
+
+        <service
+            android:name="com.fitpolo.demo.service.FitpoloNotificationCollectorService"
+            android:label="@string/app_name"
+            android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
+            <intent-filter>
+                <action android:name="android.service.notification.NotificationListenerService" />
+            </intent-filter>
+        </service>
+        <service android:name="com.fitpolo.demo.service.FitpoloNotificationCollectorMonitorService" />
     </application>
 
 </manifest>
