--- a/fitpolosupport/build.gradle
+++ b/fitpolosupport/build.gradle
@@ -20,4 +20,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.elvishew:xlog:1.3.0'
+    compile 'no.nordicsemi.android.support.v18:scanner:1.0.0'
 }
