支持Gradle3.2.1,修改gradle配置

--- a/fitpolosupport/build.gradle
+++ b/fitpolosupport/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 28
+    buildToolsVersion '28.0.3'
 
     defaultConfig {
         minSdkVersion 18
-        targetSdkVersion 23
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
     }
@@ -18,8 +18,8 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'no.nordicsemi.android.support.v18:scanner:1.0.0'
-    compile 'com.elvishew:xlog:1.3.0'
-    compile 'no.nordicsemi.android:dfu:0.6.2'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'no.nordicsemi.android.support.v18:scanner:1.0.0'
+    implementation 'com.elvishew:xlog:1.3.0'
+    api 'no.nordicsemi.android:dfu:0.6.2'
 }
